--- a/game_app/templates/index.html
+++ b/game_app/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title><h1>Gra</h1><h3>Wersja 1.0, Autor: Sylwia</h3></title>
 </head>
 <body>
-$END$
+
 </body>
 </html>
